--- a/readme
+++ b/readme
@@ -39,24 +39,9 @@ create table user_action_log
 create table sku_data_permissions
 (
   ID           bigint             not null
-  comment 'ID'
-    primary key,
-  skuId        bigint             null
-  comment '用户ID',
-  rightsId     bigint             null
-  comment '权益ID',
-  status       int(1)             null
-  comment '状态（0-审核中,1-审核通过,2-审核不通过,3-取消）',
+  comment 'ID' primary key,
   deleteFlag   int(1) default '0' not null
-  comment '是否删除 1-是 0-否',
-  createUserId bigint             null
-  comment '创建人',
-  createTime   datetime           null
-  comment '创建时间',
-  updateUserId bigint             null
-  comment '修改人',
-  updateTime   datetime           null
-  comment '修改时间'
+  comment '是否删除 1-是 0-否'
 )
   comment 'sku数据权限表';
 
